sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value i
    i=0
    ^AlgCombSort:10: error: not found: value i
    while(i+ecart<getNombreValeurs()-1){
          ^AlgCombSort:11: error: not found: value i
      i=i+ecart
      ^AlgCombSort:13: error: not found: value i
      i=i+1
      ^AlgCombSort:16: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while(ecart>1 || inverse=true)
                ^